# rofr

./: README.md  pyproject.toml
assets/schemas/: DocRegExt-v1.xsd  benson-ivoa-bundle.xsd
assets/standards/: DocRegExt.xml
assets/static/js/: validator-watch.js
assets/templates/: validator.html
assets/validate/: README.md  testsVOResource-v1_0.xsl
docs/: README.md  regvalidate-api.md  regvalidate-functional-contract.md  schemas-and-validation-assets.md
docs/samples/voresource-validater/: README.md
src/benson/: config.py  main.py
src/benson/http/: harvest.py  publishers.py  validator.py
src/benson/oai/: phase2.py  phase3.py
src/benson/registry/: publishers_store.py  registration.py
src/benson/service/: harvest_runner.py  rofr_lists.py  searchables_regtap.py
src/benson/xml/: schema_resolver.py  xsd_validate.py
tests/: test_config.py  test_registry.py  test_searchables_regtap.py  test_xsd_validate.py
